# imitation-learning-codebase

./: .gitconfig  .gitignore  .gitmodules  EXAMPLES.md  INSTALL.md  README.md  debug_calibration.ipynb  launch.sh  notes.txt  test_object_detection.py  test_suite.sh
dependency-graph/: dependency-graph
notebooks/: Create Heuristic.ipynb  Create_side_tuned_network.ipynb  Line_decoders_from_pretrained_checkpoints_taskonomy.ipynb  Offline_model_evaluation.ipynb  Policy_gradients_cartpole.ipynb  create_heuristic.ipynb  debug_line_segmentation_network.ipynb  dependency_graph_visualizer.ipynb  dependency_graph_visualizer.py  draft_data_generation.ipynb  evaluate_interactive.ipynb  line_data_augmentation.ipynb  line_segmentation.ipynb  line_world_generator.ipynb  neural_style_tutorial.ipynb  pretrain_models_on_imagenet.ipynb  pretrained_checkpoints_taskonomy.ipynb
real-bebop-fgbg/: controller_specs.yml
rosenvironment/: Makefile  entrypoint.sh
rosenvironment/singularity/: CHANGELOG  Makefile  README.md  Vagrantfile  WISHLIST  build_writable_image.sh  create_image.sh  matterport_singularity.def  requirements  singularity.def
singularity/: Makefile  README.md  Vagrantfile  build_writable_image.sh  create_image.sh  login_remote.sh  remote.yaml  requirements  singularity.def
singularity/test/: Makefile  singularity_sanity_check.py
src/: README.md
src/ai/: architectural_components.py  base_net.py  deep_supervision.py  deep_supervision_confidence.py  deep_supervision_with_discriminator.py  domain_adaptation_trainer.py  domain_adaptation_trainer_with_deep_supervision.py  evaluator.py  losses.py  model.py  model_trainer.py  ppo.py  ppo_with_adversary.py  trainer.py  trainer_factory.py  utils.py  vpg.py
src/condor/: Makefile  condor_job.py  condor_launcher.py  helper_functions.py
src/core/: asyncio_helper.py  config_loader.py  data_types.py  filters.py  logger.py  object_factory.py  tensorboard_wrapper.py  utils.py
src/data/: create_hdf5_train_validation.py  data_loader.py  data_saver.py  data_types.py  dataset_labels.py  dataset_loader.py  dataset_saver.py  io_adapter.py  utils.py
src/scripts/: data_cleaning.py  data_collection.py  dataset_experiment.py  (+10 more)
src/sim/ros/catkin_ws/src/imitation-learning-package/: CMakeLists.txt
src/sim/ros/catkin_ws/src/imitation-learning-package/launch/: gazebo.launch  load_ros.launch
src/sim/ros/catkin_ws/src/imitation_learning_ros_package/: CMakeLists.txt  package.xml
src/sim/ros/catkin_ws/src/imitation_learning_ros_package/launch/: load_ros.launch
src/sim/ros/catkin_ws/src/imitation_learning_ros_package/msg/: RosAction.msg  RosReward.msg  RosSensor.msg  RosState.msg
src/sim/ros/catkin_ws/src/imitation_learning_ros_package/rosnodes/: DEPRECATED_dnn_actor_ros.py  actors.py  control_mapper.py  control_mapping.py  depth_heuristic.py  dnn_actor.py  dnn_actor_ros.py  fsm.py  robot_display.py  robot_mapping.py  ros_expert.py  teleop_twist_keyboard.py  template.py  waypoint_indicator.py
src/sim/ros/python3_ros_ws/src/imitation_learning_ros_package/: CMakeLists.txt  package.xml
src/sim/ros/python3_ros_ws/src/imitation_learning_ros_package/cfg/: pid.cfg
src/sim/ros/python3_ros_ws/src/imitation_learning_ros_package/jupyter/: robot_mapper_preparations.ipynb
src/sim/ros/python3_ros_ws/src/imitation_learning_ros_package/launch/: calibrate_camera.launch  double_drone.launch  dso_bebop.launch  gazebo.launch  joystick_bebop_real.launch  joystick_turtlebot_real.launch  load_ros.launch  teleop_joystick.launch
src/sim/ros/python3_ros_ws/src/imitation_learning_ros_package/msg/: CombinedGlobalPoses.msg
src/sim/ros/python3_ros_ws/src/imitation_learning_ros_package/rosnodes/: DEPRECATED_dnn_actor_ros.py  actors.py  altitude_control.py  april_tag_detector.py  bounding_box_indicator.py  chessboard_detector.py  control_mapping.py  fgbg_actor.py  fsm.py  mathias_bebop_model.py  mathias_controller.py  mathias_controller_with_KF.py  mathias_kalman_filter.py  modified_state_frame_visualizer.py  modified_state_publisher.py  robot_display.py  robot_display_edge.py  robot_gui.py  robot_mapping.py  ros_expert.py  teleop_twist_joystick.py  teleop_twist_keyboard.py  template.py  visualize_trajs.ipynb  waypoint_indicator.py
test/: Makefile  singularity_sanity_check.py
virtualenvironment/: Makefile  README.md  entrypoint.sh  env-file.txt  requirements-conda  requirements-pip
(+2508 files in other folders)
