<package>
  <name>imitation_learning_ros_package</name>
  <version>0.0.0</version>
  <description>Ros nodes required for imitation learning in with ROS robots.</description>
  <maintainer email="kkelchte@esat.kuleuven.be">Klaas Kelchtermans</maintainer>
  <license>BSD</license>

  <author email="kkelchte@esat.kuleuven.be">Klaas Kelchtermans</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
    <run_depend>joy</run_depend>
<!--  <run_depend>hector_quadrotor</run_depend>-->
<!--  <run_depend>hector_sensors_description</run_depend>-->

  <!-- Dependencies needed only for running tests. -->
  <export>
  <gazebo_ros gazebo_model_path="$(env CODEDIR)/src/sim/ros/gazebo/models"/>
  </export>

</package>